[M1][#1] Add Mongo budgeting collections and indexes (#25)
* feat: add mongodb budgeting schema and indexes

* ci: pin mongodb extension version in workflows

* fix: align mongodb lockfile with CI extension version

* chore: add local mongodb compose service on 27018

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,14 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# MONGODB_URI=
+# MONGODB_HOST=127.0.0.1
+# MONGODB_PORT=27018
+# MONGODB_DATABASE=flv2
+# MONGODB_USERNAME=
+# MONGODB_PASSWORD=
+# MONGODB_AUTH_DATABASE=admin
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
