chore(quality): add Larastan analysis to workflow and CI

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Run Pint
         run: composer lint
 
+      - name: Run Larastan
+        run: composer analyse
+
       - name: Format Frontend
         run: npm run format
 
