--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/boost": "^2.1",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
@@ -60,6 +61,9 @@
         ],
         "lint": [
             "pint --parallel"
+        ],
+        "analyse": [
+            "phpstan analyse --memory-limit=1G --no-progress"
         ],
         "test:lint": [
             "pint --parallel --test"
