chore: tighten money invariants and cycle close contracts

--- a/.env.example
+++ b/.env.example
@@ -20,20 +20,20 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mongodb
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-# MONGODB_URI=
-# MONGODB_HOST=127.0.0.1
-# MONGODB_PORT=27018
-# MONGODB_DATABASE=flv2
-# MONGODB_USERNAME=
-# MONGODB_PASSWORD=
-# MONGODB_AUTH_DATABASE=admin
+MONGODB_URI=
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27018
+MONGODB_DATABASE=flv2
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_AUTH_DATABASE=admin
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
