feat: implement AI SDK intent classification and routing contract #13
Closes #13

--- a/.env.example
+++ b/.env.example
@@ -70,4 +70,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+OPENROUTER_API_KEY=
+AI_INTENT_PROVIDER=openrouter
+AI_INTENT_MODEL=anthropic/sonnet
+AI_INTENT_TIMEOUT=30
+
 VITE_APP_NAME="${APP_NAME}"
