feat(auth): add google and apple social sign-in with account linking #23
Closes #23

--- a/.env.example
+++ b/.env.example
@@ -74,5 +74,11 @@ OPENROUTER_API_KEY=
 AI_INTENT_PROVIDER=openrouter
 AI_INTENT_MODEL=anthropic/sonnet
 AI_INTENT_TIMEOUT=30
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI="${APP_URL}/auth/google/callback"
+APPLE_CLIENT_ID=
+APPLE_CLIENT_SECRET=
+APPLE_REDIRECT_URI="${APP_URL}/auth/apple/callback"
 
 VITE_APP_NAME="${APP_NAME}"
