--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ai": "^0.1.3",
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
         "mongodb/laravel-mongodb": "^5.5"
